// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clip.yml - yaml-verify 1`] = `
>
    123
    456
    789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>
  123
  456
  789

`;

exports[`clip.yml - yaml-verify 2`] = `
>
    123
    456
    789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>
  123 456 789

`;

exports[`indent.yml - yaml-verify 1`] = `
>2-
    123
   456
  789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>2-
    123
   456
  789

`;

exports[`indent.yml - yaml-verify 2`] = `
>2-
    123
   456
  789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>2-
    123
   456
  789

`;

exports[`keep.yml - yaml-verify 1`] = `
>+
    123
    456
    789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>+
  123
  456
  789



`;

exports[`keep.yml - yaml-verify 2`] = `
>+
    123
    456
    789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>+
  123 456 789



`;

exports[`map.yml - yaml-verify 1`] = `
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0

`;

exports[`map.yml - yaml-verify 2`] = `
a: >
  123
  456
  789
b: >1
    123
   456
  789
d: >
  123
  456
  789

c: 0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: >
  123 456 789
b: >1
    123
   456
  789
d: >
  123 456 789

c: 0

`;

exports[`middle-comment.yml - yaml-verify 1`] = `
!!str #comment
>
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str #comment
>
  123

`;

exports[`middle-comment.yml - yaml-verify 2`] = `
!!str #comment
>
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str #comment
>
  123

`;

exports[`middle-comments.yml - yaml-verify 1`] = `
!!str # comment 1
# comment 2
>
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
>
  123

`;

exports[`middle-comments.yml - yaml-verify 2`] = `
!!str # comment 1
# comment 2
>
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str
# comment 1
# comment 2
>
  123

`;

exports[`newline.yml - yaml-verify 1`] = `
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0

`;

exports[`newline.yml - yaml-verify 2`] = `
- >+
  123
  456
  789

  123
  456
  789


  123
  456
  789


- >2+
  123
  456
  789

  123
  456
  789


  123
  456
  789

- 0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- >+
  123 456 789

  123 456 789


  123 456 789


- >2+
  123 456 789

  123 456 789


  123 456 789

- 0

`;

exports[`newline-unaligned.yml - yaml-verify 1`] = `
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6

`;

exports[`newline-unaligned.yml - yaml-verify 2`] = `
>
  1
  2
    3
    4
  5
  6

  1
  2
    3
    4
  5
  6


  1
  2
    3
    4
  5
  6

  1
  2

    3
    4

  5
  6
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>
  1 2
    3
    4
  5 6

  1 2
    3
    4
  5 6


  1 2
    3
    4
  5 6

  1 2

    3
    4

  5 6

`;

exports[`props.yml - yaml-verify 1`] = `
!!str &anchor >
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str &anchor >
  123

`;

exports[`props.yml - yaml-verify 2`] = `
!!str &anchor >
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!str &anchor >
  123

`;

exports[`props-in-map.yml - yaml-verify 1`] = `
a: !!str &anchor >
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!str &anchor >
  123

`;

exports[`props-in-map.yml - yaml-verify 2`] = `
a: !!str &anchor >
  123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!str &anchor >
  123

`;

exports[`prose.yml - yaml-verify 1`] = `
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
> 
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
>
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789

`;

exports[`prose.yml - yaml-verify 2`] = `
>
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
  123 456 789
---
> 
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
  123   456   789
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>
  123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123
  456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456
  789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
---
>
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789 123   456   789
  123   456   789 123   456   789 123   456   789

`;

exports[`seq.yml - yaml-verify 1`] = `
- >
  123
  456
  789
- >1
    123
   456
  789
- 0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- >
  123
  456
  789
- >1
    123
   456
  789
- 0

`;

exports[`seq.yml - yaml-verify 2`] = `
- >
  123
  456
  789
- >1
    123
   456
  789
- 0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- >
  123 456 789
- >1
    123
   456
  789
- 0

`;

exports[`strip.yml - yaml-verify 1`] = `
>-
    123
    456
    789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>-
  123
  456
  789

`;

exports[`strip.yml - yaml-verify 2`] = `
>-
    123
    456
    789


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>-
  123 456 789

`;

exports[`trailing-comment.yml - yaml-verify 1`] = `
a: !!str > # hello
  hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!str > # hello
  hello

`;

exports[`trailing-comment.yml - yaml-verify 2`] = `
a: !!str > # hello
  hello
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: !!str > # hello
  hello

`;
